--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,11 +10,16 @@ repos:
       - id: check-added-large-files
 
   - repo: https://github.com/compilerla/conventional-pre-commit
-    rev: <git sha or tag>
+    rev: "v4.0.0"
     hooks:
       - id: conventional-pre-commit
         stages: [commit-msg]
         args: []
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v1.15.0"
+    hooks:
+      - id: mypy
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.11.2
