--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,22 @@ requires-python = ">=3.12"
 dependencies = []
 
 [dependency-groups]
-dev = [
-    "pre-commit>=4.2.0",
-    "ruff>=0.11.2",
-]
+dev = ["mkdocs>=1.6.1", "pre-commit>=4.2.0", "ruff>=0.11.2"]
+
+[tool.ruff]
+exclude = [".venv", "docs"]
+# Same as Black.
+line-length = 128
+indent-width = 4
+# Assume Python 3.9
+target-version = "py312"
+
+[tool.ruff.format]
+# Like Black, use double quotes for strings.
+quote-style = "double"
+# Like Black, indent with spaces, rather than tabs.
+indent-style = "space"
+# Like Black, respect magic trailing commas.
+skip-magic-trailing-comma = false
+# Like Black, automatically detect the appropriate line ending.
+line-ending = "auto"
