--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,12 @@ requires-python = ">=3.12"
 dependencies = []
 
 [dependency-groups]
-dev = ["mkdocs>=1.6.1", "pre-commit>=4.2.0", "ruff>=0.11.2"]
+dev = [
+    "mkdocs>=1.6.1",
+    "mypy>=1.15.0",
+ "pre-commit>=4.2.0",
+ "ruff>=0.11.2",
+]
 
 [tool.ruff]
 exclude = [".venv", "docs"]
@@ -26,3 +31,8 @@ indent-style = "space"
 skip-magic-trailing-comma = false
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
+
+[tool.mypy]
+python_version = "3.12"
+ignore_missing_imports = true
+strict = true
