--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,8 @@ requires-python = ">=3.12"
 dependencies = []
 
 [dependency-groups]
-dev = [
-    "mkdocs>=1.6.1",
-    "mypy>=1.15.0",
- "pre-commit>=4.2.0",
- "ruff>=0.11.2",
-]
+dev = ["pre-commit>=4.2.0", "pyright>=1.1.398", "pytest>=8.3.5", "ruff>=0.11.2"]
+docs = ["mkdocs>=1.6.1"]
 
 [tool.ruff]
 exclude = [".venv", "docs"]
@@ -31,8 +27,3 @@ indent-style = "space"
 skip-magic-trailing-comma = false
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
-
-[tool.mypy]
-python_version = "3.12"
-ignore_missing_imports = true
-strict = true
