--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ dependencies = []
 dev = ["pre-commit>=4.2.0", "pyright>=1.1.398", "pytest>=8.3.5", "ruff>=0.11.2"]
 docs = ["mkdocs>=1.6.1"]
 
+[tool.pyright]
+venv = ".venv"
+
 [tool.ruff]
 exclude = [".venv", "docs"]
 # Same as Black.
