--- a/mise.toml
+++ b/mise.toml
@@ -12,3 +12,9 @@ run = 'uv run python app.py'
 
 [tasks.docs]
 run = 'cd docs; uv run mkdocs serve'
+
+[tasks.test]
+run = 'uv run pytest'
+
+[tasks.pyright]
+run = 'uv run pyright'
