--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,10 +16,11 @@ repos:
         stages: [commit-msg]
         args: []
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v1.15.0"
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.1.0
     hooks:
-      - id: mypy
+      - id: prettier
+        types_or: [yaml, json5]
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.11.2
