--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,10 @@ indent-style = "space"
 skip-magic-trailing-comma = false
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
+
+
+[tool.black]
+line-length = 120
+target-version = ["py312"]
+skip-string-normalization = false # Use double quotes (default is false, i.e., prefer double)
+skip-magic-trailing-comma = false
