--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,13 @@ requires-python = ">=3.12"
 dependencies = ["loguru>=0.7.3"]
 
 [dependency-groups]
-dev = ["pre-commit>=4.2.0", "pyright>=1.1.398", "pytest>=8.3.5", "ruff>=0.11.2"]
+dev = [
+    "pre-commit>=4.2.0",
+    "pyright>=1.1.398",
+    "pytest-cov>=6.1.1",
+    "pytest>=8.3.5",
+    "ruff>=0.11.2",
+]
 docs = ["mkdocs>=1.6.1"]
 
 [tool.pyright]
