--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dev = [
     "pytest-cov>=6.1.1",
     "pytest>=8.3.5",
     "ruff>=0.11.2",
+    "coverage-badge>=1.1.2",
 ]
 docs = ["mkdocs>=1.6.1"]
 
