--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,12 @@ dependencies = ["loguru>=0.7.3"]
 
 [dependency-groups]
 dev = [
-    "pre-commit>=4.2.0",
-    "pyright>=1.1.398",
-    "pytest-cov>=6.1.1",
-    "pytest>=8.3.5",
-    "ruff>=0.11.2",
-    "coverage-badge>=1.1.2",
+  "pre-commit>=4.2.0",
+  "pyright>=1.1.398",
+  "pytest-cov>=6.1.1",
+  "pytest>=8.3.5",
+  "ruff>=0.11.2",
+  "coverage-badge>=1.1.2",
 ]
 docs = ["mkdocs>=1.6.1"]
 
@@ -51,3 +51,9 @@ skip-magic-trailing-comma = false
 minversion = "6.0"
 addopts = "-ra -q"
 testpaths = ["tests"]
+
+[tool.setuptools.packages.find]
+where = ["template"]
+
+[tool.setuptools.package-data]
+"template" = ["py.typed"]
