--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,10 @@ repos:
       # Run the formatter.
       - id: ruff-format
         types_or: [python, pyi]
+
+  - repo: https://github.com/econchick/interrogate
+    rev: 1.7.0 # or master if you're bold
+    hooks:
+      - id: interrogate
+        args: [--quiet, --fail-under=95]
+        pass_filenames: false # needed if excluding files with pyproject.toml or setup.cfg
