--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,3 +66,21 @@ where = ["template"]
 
 [tool.setuptools.package-data]
 "template" = ["py.typed"]
+
+
+[tool.interrogate]
+ignore-init-method = true
+ignore-init-module = false
+ignore-magic = false
+ignore-semiprivate = false
+ignore-private = false
+ignore-module = false
+ignore-property-decorators = false
+fail-under = 95
+exclude = ["tests/", "setup.py", "docs"]
+verbose = 0
+omit-covered-files = false
+quiet = false
+whitelist-regex = []
+ignore-regex = []
+color = true
