build: add badge to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,5 +37,5 @@ repos:
     rev: 1.7.0 # or master if you're bold
     hooks:
       - id: interrogate
-        args: [--quiet, --fail-under=95]
+        args: [--quiet, --fail-under=95, --generate-badge, docs/interrogate.svg]
         pass_filenames: false # needed if excluding files with pyproject.toml or setup.cfg
