--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,3 +39,9 @@ repos:
       - id: interrogate
         args: [--quiet, --fail-under=95, --generate-badge, docs/interrogate.svg]
         pass_filenames: false # needed if excluding files with pyproject.toml or setup.cfg
+
+  - repo: https://github.com/PyCQA/bandit
+    rev: "1.7.5"
+    hooks:
+      - id: bandit
+        args: ["-r", "template"]
