--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,13 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+
+default_stages:
+  - pre-commit
+
+default_install_hook_types:
+  - pre-commit
+  - commit-msg
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
@@ -44,4 +52,5 @@ repos:
     rev: "1.7.5"
     hooks:
       - id: bandit
-        args: ["-r", "template"]
+        args: ["-r", "pygentic_vnt"]
+        exclude: .*/?tests/.+
