--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,12 +45,12 @@ repos:
     rev: 1.7.0 # or master if you're bold
     hooks:
       - id: interrogate
-        args: [--quiet, --fail-under=95, --generate-badge, docs/interrogate.svg]
+        args: [--fail-under=95, --generate-badge, docs/interrogate.svg]
         pass_filenames: false # needed if excluding files with pyproject.toml or setup.cfg
 
   - repo: https://github.com/PyCQA/bandit
     rev: "1.7.5"
     hooks:
       - id: bandit
-        args: ["-r", "template"]
+        args: ["-r", "src"]
         exclude: .*/?tests/.+
