chore: update project structure and task configurations
- Changed task scripts in `mise.toml` to reflect new source directory `src` instead of `template`.
- Updated coverage tasks and security checks to reference the new directory structure.
- Removed `mkdocs` dependency from `pyproject.toml`.
- Adjusted package data and package finding configurations to use the `src` directory.
- Updated interrogate configuration to ignore init module and changed verbose level.

--- a/mise.toml
+++ b/mise.toml
@@ -9,27 +9,23 @@ PYTHONPATH = "."
 enter = "echo 'Welcome to the template project'"
 
 [tasks.app]
-run = 'uv run python template/app.py'
-
-[tasks.docs]
-run = 'cd docs; uv run mkdocs serve'
+run = 'uv run python src/app.py'
 
 [tasks.test]
 run = 'uv run pytest'
 
 [tasks.cov]
 run = [
-  'uv run pytest --cov=template --cov-report=xml',
+  'uv run pytest --cov=src --cov-report=xml',
   'uv run coverage-badge -o docs/coverage.svg -f',
   'uv run interrogate --generate-badge docs/interrogate.svg',
 ]
 
-
 [tasks.sec]
-run = ['uv run bandit -r template']
+run = ['uv run bandit -r src']
 
 [tasks.cov-html]
-run = 'uv run pytest --cov=template --cov-report=html'
+run = 'uv run pytest --cov=src --cov-report=html'
 
 [tasks.pyright]
 run = 'uv run pyright'
